--- a/app.json
+++ b/app.json
@@ -17,6 +17,12 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "permissions":[
+      "ACCESS_FINE_LOCATION",
+      "ACCESS_COARSE_LOCATION",
+      "ACCESS_FINE_LOCATION",
+      "ACCESS_COARSE_LOCATION"
+    ],
     "web": {
       "bundler": "metro",
       "output": "static",
